#17482: Fixing text overflow on features screen.
--HG--
branch : 1.x

--- a/src/Orchard.Web/Modules/Orchard.Modules/styles/orchard-modules-admin.css
+++ b/src/Orchard.Web/Modules/Orchard.Modules/styles/orchard-modules-admin.css
@@ -56,8 +56,9 @@ html.dyn #main ul.features button
 .features .enabled.feature {
     background:#FFF;
 }
-.features.summary-view .enabled.feature {
-    border-color:#CFE493;
+.features.summary-view .enabled.feature, .features.summary-view .disabled.feature {
+    border-color:#cfe493;
+    overflow:hidden;
 }
 .features .disabled.feature {
     background:#f3f3f3;
